test/golden/values-metrics.golden.yaml
---
# Source: testing-api/templates/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: smoke-testing-api-metrics
  labels:
    helm.sh/chart: testing-api-0.0.0
    app.kubernetes.io/name: testing-api
    app.kubernetes.io/instance: smoke
    app.kubernetes.io/managed-by: Helm
    release: kube-prometheus-stack
    team: platform
spec:
  type: ClusterIP
  ports:
    - port: 9211
      targetPort: metrics
      name: http-metrics
      protocol: TCP
  selector:
    app.kubernetes.io/name: testing-api
    app.kubernetes.io/instance: smoke
---
# Source: testing-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smoke-testing-api
  labels:
    helm.sh/chart: testing-api-0.0.0
    app.kubernetes.io/name: testing-api
    app.kubernetes.io/instance: smoke
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: "app"
      name: "app"
  selector:
    app.kubernetes.io/name: testing-api
    app.kubernetes.io/instance: smoke
---
# Source: testing-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smoke-testing-api
  labels:
    helm.sh/chart: testing-api-0.0.0
    app.kubernetes.io/name: testing-api
    app.kubernetes.io/instance: smoke
    app.kubernetes.io/managed-by: Helm
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: testing-api
      app.kubernetes.io/instance: smoke
  template:
    metadata:
      labels:
        app.kubernetes.io/name: testing-api
        app.kubernetes.io/instance: smoke
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: app
          image: "myrepo/my-observable-app:latest"
          imagePullPolicy: IfNotPresent
          env:
            - name: HELM_Version
              value: "0.0.0"
            - name: HELM_AppVersion
              value: ""
            - name: HELM_Description
              value: "testing-api"
            - name: HELM_Namespace
              value: "yorumjet-test-apps"
            - name: K8S_Namespace
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name:  "LOG_LEVEL"
              value: "info"
            - name:  "METRICS_PORT"
              value: "9090"
          ports:
            - name: app
              containerPort: 8080
              protocol: TCP
            - name: metrics
              containerPort: 9090
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 256Mi
---
# Source: testing-api/templates/deployment.yaml
apiVersion: monitoring.coreos.com/v1
kind: PrometheusRule
metadata:
  name: smoke-testing-api-metrics
  labels:
    helm.sh/chart: testing-api-0.0.0
    app.kubernetes.io/name: testing-api
    app.kubernetes.io/instance: smoke
    app.kubernetes.io/managed-by: Helm
    release: kube-prometheus-stack
    team: platform
spec:
  groups:
    - name: smoke-testing-api-metrics
      rules:
        - alert: 'smokeHighErrorRate'
          annotations:
            description: More than 5% of HTTP requests have failed in the last 10 minutes.
            summary: High 5xx rate on smoke
          expr: sum(rate(http_requests_total{status=~"5.."}[5m])) > 0.05
          for: 10m
          labels:
            owner: platform
            severity: warning
        - alert: 'smokePodCrashLooping'
          annotations:
            summary: Pod is crash-looping in yorumjet-test-apps
          expr: rate(kube_pod_container_status_restarts_total{namespace="yorumjet-test-apps"}[15m]) > 0
          for: 5m
          labels:
            severity: critical
        - expr: sum by(job) (http_inprogress_requests)
          record: job:http_inprogress_requests:sum
---
# Source: testing-api/templates/deployment.yaml
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  name: smoke-testing-api-metrics
  labels:
    helm.sh/chart: testing-api-0.0.0
    app.kubernetes.io/name: testing-api
    app.kubernetes.io/instance: smoke
    app.kubernetes.io/managed-by: Helm
    release: kube-prometheus-stack
    team: platform
spec:
  endpoints:
    - port: http-metrics
      path: /metrics
      interval: 30s
      scrapeTimeout: 10s
      scheme: http
      relabelings:
        - sourceLabels:
          - __meta_kubernetes_pod_node_name
          targetLabel: node
        - sourceLabels:
          - __meta_kubernetes_namespace
          targetLabel: k8s_namespace
      metricRelabelings:
        - action: drop
          regex: go_gc_.*
          sourceLabels:
          - __name__
  selector:
    matchLabels:
      app.kubernetes.io/name: testing-api
      app.kubernetes.io/instance: smoke
  namespaceSelector:
    matchNames:
      - yorumjet-test-apps
