test/golden/values-middle.golden.yaml
---
# Source: testing-api/templates/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: smoke-testing-api-metrics
  labels:
    helm.sh/chart: testing-api-0.0.0
    app.kubernetes.io/name: testing-api
    app.kubernetes.io/instance: smoke
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9211
      targetPort: metrics
      name: http-metrics
      protocol: TCP
  selector:
    app.kubernetes.io/name: testing-api
    app.kubernetes.io/instance: smoke
---
# Source: testing-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smoke-testing-api
  labels:
    helm.sh/chart: testing-api-0.0.0
    app.kubernetes.io/name: testing-api
    app.kubernetes.io/instance: smoke
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: "app"
      name: "app"
      nodePort: 31999
  selector:
    app.kubernetes.io/name: testing-api
    app.kubernetes.io/instance: smoke
---
# Source: testing-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smoke-testing-api
  labels:
    helm.sh/chart: testing-api-0.0.0
    app.kubernetes.io/name: testing-api
    app.kubernetes.io/instance: smoke
    app.kubernetes.io/managed-by: Helm
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: testing-api
      app.kubernetes.io/instance: smoke
  template:
    metadata:
      labels:
        app.kubernetes.io/name: testing-api
        app.kubernetes.io/instance: smoke
    spec:
      terminationGracePeriodSeconds: 12
      imagePullSecrets:
        - name: 'our-common-pull-secret-name'
      containers:
        - name: app
          image: "myrepo:latest"
          imagePullPolicy: IfNotPresent
          envFrom:
            - configMapRef:
                name: "app-env"
                optional: false
            - secretRef:
                name: "app-secrets"
                optional: false
          env:
            - name: HELM_Version
              value: "0.0.0"
            - name: HELM_AppVersion
              value: ""
            - name: HELM_Description
              value: "testing-api"
            - name: HELM_Namespace
              value: "yorumjet-test-apps"
            - name: K8S_Namespace
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name:  "ASPNETCORE_ENVIRONMENT"
              value: "Production"
          ports:
            - name: app
              containerPort: 80
              protocol: TCP
            - name: metrics
              containerPort: 9090
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 256Mi
---
# Source: testing-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smoke-testing-api
  labels:
    helm.sh/chart: testing-api-0.0.0
    app.kubernetes.io/name: testing-api
    app.kubernetes.io/instance: smoke
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: "nginx"
  
  rules:
    - host: dev.myapi.mydomain.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smoke-testing-api
                port:
                  name: "app"
